Update dependencies to otree instead of otree-core - runs on otree 2.X, not otree 1.X

--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,4 +1,5 @@
-otree-core>=1.4.5
+otree
+# otree-core>=1.4.5
 # Django==1.8.8 # for heroku, needs to be explicitly in requirements file
 pycryptodome
 # xlrd
