--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,7 +1,6 @@
-otree
+otree>=2.1.9
 # otree-core>=1.4.5
 # Django==1.8.8 # for heroku, needs to be explicitly in requirements file
 pycryptodome
 # xlrd
-# xlsxwriter
 # numpy
